mobile menu z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,7 @@ header {
     position: absolute;
     right: -20rem;
     top: 0;
+    z-index: 2;
   }
   .header__user-actions button {
     width: 80%;
