--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -120,6 +120,7 @@ header {
         position: absolute;
         right: -20rem;
         top: 0;
+        z-index: 2;
         
         button {
             width: 80%;
